i think my layout is ready, time to work on the functionality

--- a/index.html
+++ b/index.html
@@ -35,8 +35,16 @@
       <main class="row justify-content-center align-items-center">
         <div id="questionCard" class="col-10">
           <div id="quizContent" class="row">
-            <div>question</div>
-            <div>answers</div>
+            <div id="currentQuestion" class="col">
+              What is going to happen if I do this? Very Very Very Very long
+              question will there be a space ?
+            </div>
+            <div id="answersWrap" class="col-12">
+              <div type="button" class="answer">A) Just checking</div>
+              <div type="button" class="answer">B) You think so?</div>
+              <div type="button" class="answer">C) Why is this happening</div>
+              <div type="button" class="answer">D) I totally dislike this</div>
+            </div>
           </div>
         </div>
       </main>
