--- a/index.html
+++ b/index.html
@@ -34,6 +34,20 @@
       </header>
       <main class="row justify-content-center align-items-center">
         <div id="questionCard" class="col-10">
+          <div class="row">
+            <div id="landingTitle" class="col-12">Greetings, User!</div>
+            <div id="landingText" class="col-12">
+              Here are the instructions on how to use this application.
+            </div>
+          </div>
+          <div class="row justify-content-center">
+            <div type="button" class="col-4 control-buttons btn btn-warning">
+              Start
+            </div>
+            <div type="button" class="col-4 control-buttons btn btn-warning">
+              Try Again
+            </div>
+          </div>
           <div id="quizContent" class="row">
             <div id="currentQuestion" class="col">
               What is going to happen if I do this? Very Very Very Very long
@@ -46,10 +60,19 @@
               <div type="button" class="answer">D) I totally dislike this</div>
             </div>
           </div>
+          <div id="leaderboardWrap" class="row">
+            <div id="leaderboardTitle" class="col-12">Leaderboard</div>
+            <div id="usersParent" class="col-12">
+              <div class="user">Harry Potter</div>
+              <div class="user">Harry Potter</div>
+              <div class="user">Harry Potter</div>
+              <div class="user">Harry Potter</div>
+            </div>
+          </div>
         </div>
       </main>
       <footer class="row">
-        <div class="col-12">Footer</div>
+        <div class="col-12"></div>
       </footer>
     </div>
     <!-- boostrap  -->
