--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <body>
     <div class="container-fluid">
       <header class="row">
-        <div type="button" id="leaderboard" class="col-2 btn btn-warning">
+        <div type="button" id="leaderboardBtn" class="col-2 btn btn-warning">
           Leaderboard
         </div>
         <div id="title" class="col-2">Coding Quiz</div>
@@ -60,8 +60,15 @@
               <div type="button" class="answer">D) I totally dislike this</div>
             </div>
           </div>
-          <div id="leaderboardWrap" class="row">
-            <div id="leaderboardTitle" class="col-12">Leaderboard</div>
+          <div id="leaderboardWrap" class="row hide">
+            <div id="leaderboardTitle" class="col-10">Leaderboard</div>
+            <div
+              type="button"
+              id="leaderboardSpoiler"
+              class="col-2 btn btn-warning"
+            >
+              Hide
+            </div>
             <div id="usersParent" class="col-12">
               <div class="user">Harry Potter</div>
               <div class="user">Harry Potter</div>
