--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Coding Quiz</title>
     <!-- boostrap  -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
@@ -59,7 +59,7 @@
           <div id="quizContent" class="row hide">
             <div id="currentQuestion" class="col">
               What is going to happen if I do this? Very Very Very Very long
-              question will there be a space ?
+              question will there be enough space ?
             </div>
             <div id="answersWrap" class="col-12">
               <div type="button" class="answer">A) Just checking</div>
