everything seems to be working well, time to incorporate localstorage

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div type="button" id="leaderboardBtn" class="col-2 btn btn-warning">
           Leaderboard
         </div>
-        <div id="title" class="col-2">Coding Quiz</div>
+        <!-- <div id="title" class="col-2">Coding Quiz</div> -->
         <div id="countdown" class="col-2">Countdown</div>
       </header>
       <main class="row justify-content-center align-items-center">
@@ -120,9 +120,7 @@
           </div>
         </div>
       </main>
-      <footer class="row">
-        <div class="col-12"></div>
-      </footer>
+      <footer id="footer" class="row justify-content-center">Quiz</footer>
     </div>
     <!-- boostrap  -->
     <script
