--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Coding Quiz</title>
+    <title>AnswerMe</title>
     <!-- boostrap  -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
@@ -21,7 +21,7 @@
       rel="stylesheet"
     />
     <!-- font  -->
-    <link rel="stylesheet" href="./assest/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
     <div class="container-fluid">
@@ -142,6 +142,6 @@
     <!-- jQuery Core  -->
     <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
     <!-- jQuery Core  -->
-    <script src="./assest/js/script.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
